<resources>
    <string name="app_name">手机卫士</string>
    <string name="exitShow">再按一次退出程序!</string>
    <string name="set_pwd">设置密码</string>
    <string name="edit_pwd_first">请输入密码</string>
    <string name="edit_pwd_affirm">请再次输入密码</string>
    <string name="ok_btn">确定</string>
    <string name="cancel_btn">取消</string>
    <string name="enter_pwd">输入密码</string>
    <string name="security">手机防盗向导</string>
    <string name="sim_info">绑定SIM卡后，当再次启动手机时，若SIM卡信息发生变化，手机卫士会自动发送报警短信给安全号码.</string>
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
</resources>
