<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pwd_show_dlg"
    android:orientation="vertical"
    android:layout_gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/set_pwd"
        android:textSize="20sp"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/first_enter"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:hint="@string/edit_pwd_first"/>
    <EditText
        android:id="@+id/again_enter"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:hint="@string/edit_pwd_affirm"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ok_btn"
            android:textSize="16sp"
            android:background="@color/white"
            android:text="@string/ok_btn"
            android:onClick="onclick"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:id="@+id/cancel_btn"
            android:text="@string/cancel_btn"
            android:textSize="16sp"
            android:onClick="onclick"/>
    </LinearLayout>
</LinearLayout>
